Closed Bug 1263251 Opened 9 years ago Closed 9 years ago

AEC remote stream data not passed

Categories

(Core :: Audio/Video: MediaStreamGraph, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox46 --- unaffected
firefox47 --- unaffected
firefox48 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

(Keywords: regression)

Attachments

(1 file)

Regression from the full-duplex landing bug 1250934; a mis-merge when unbitrotting broke the refactor of UpdateStreamOrder() to break out AudioTrackPresent(). The AEC remote stream from the Mixer isn't enabled unless an odd race condition gets hit. Needs to be uplifted to 47 r=padenot in IRC
Attachment #8739530 - Flags: review+
Rank: 10
Comment on attachment 8739530 [details] [diff] [review] Calculate AudioTrackPresent correctly Approval Request Comment [Feature/regressing bug #]: 1250934 [User impact if declined]: AEC doesn't work [Describe test coverage new/current, TreeHerder]: AEC requires manual testing currently. Indirect test is to make at least two audio captures, and then (while capturing) turn on AEC logging in about:webrtc and verify it captures data (and cancels). This requires loading the log files into Audacity [Risks and why]: almost no risk - this worked before, and we're simply making sure we don't throw away the boolean we calculated. The code invoked due to it has been used for a long time. [String/UUID change made/needed]: none
Attachment #8739530 - Flags: approval-mozilla-aurora?
Keywords: regression
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Hi Jesup, the bug # you mentioned in the regression section points to bug 1250934 but that is not on 47 yet. Is there a different bug #? Am I reading this wrong somehow?
Flags: needinfo?(rjesup)
Comment on attachment 8739530 [details] [diff] [review] Calculate AudioTrackPresent correctly Patch with teh bug didn't make 47 due to the "Exit code -11" bug
Flags: needinfo?(rjesup)
Attachment #8739530 - Flags: approval-mozilla-aurora?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: