Bug 1263251: Calculate AudioTrackPresent() correctly in MediaStreamGraph r=padenot

MozReview-Commit-ID: CFrdDkMUqGP